--- a/app/styles/theme.css
+++ b/app/styles/theme.css
@@ -1,5 +1,6 @@
 :root {
-  --oui-font-family: 'Manrope', sans-serif;
+  --oui-font-family: 'Ubuntu', sans-serif;
+  --oui-font-size-base: 15px;
 
   /* colors */
   --oui-color-primary: 63 143 86;
@@ -77,12 +78,12 @@
   --oui-gradient-neutral-end: 38 41 46;
 
   /* rounded */
-  --oui-rounded-sm: 2px;
-  --oui-rounded: 4px;
-  --oui-rounded-md: 6px;
-  --oui-rounded-lg: 8px;
-  --oui-rounded-xl: 12px;
-  --oui-rounded-2xl: 16px;
+  --oui-rounded-sm: 1px;
+  --oui-rounded: 2px;
+  --oui-rounded-md: 3px;
+  --oui-rounded-lg: 4px;
+  --oui-rounded-xl: 6px;
+  --oui-rounded-2xl: 8px;
   --oui-rounded-full: 9999px;
 
   /* spacing */
@@ -91,4 +92,9 @@
   --oui-spacing-md: 26.25rem;
   --oui-spacing-lg: 30rem;
   --oui-spacing-xl: 33.75rem;
+}
+
+html, body {
+  font-family: 'Ubuntu', sans-serif !important;
+  font-size: 15px !important;
 }
