--- a/app/styles/theme.css
+++ b/app/styles/theme.css
@@ -1,15 +1,15 @@
 :root {
-  --oui-font-family: 'Manrope', sans-serif;
-  --oui-font-size-base: 16px;
+  --oui-font-family: 'Ubuntu', sans-serif;
+  --oui-font-size-base: 15px;
 
   /* colors */
-  --oui-color-primary: 176 132 233;
-  --oui-color-primary-light: 213 190 244;
-  --oui-color-primary-darken: 137 76 209;
+  --oui-color-primary: 63 143 86;
+  --oui-color-primary-light: 101 192 134;
+  --oui-color-primary-darken: 40 114 66;
   --oui-color-primary-contrast: 255 255 255;
 
-  --oui-color-link: 189 107 237;
-  --oui-color-link-light: 217 152 250;
+  --oui-color-link: 90 173 90;
+  --oui-color-link-light: 143 204 143;
 
   --oui-color-secondary: 255 255 255;
   --oui-color-tertiary: 218 218 218;
@@ -33,15 +33,15 @@
   --oui-color-fill: 36 32 47;
   --oui-color-fill-active: 40 46 58;
 
-  --oui-color-base-1: 93 83 123;
-  --oui-color-base-2: 81 72 107;
-  --oui-color-base-3: 68 61 69;
-  --oui-color-base-4: 57 52 74;
-  --oui-color-base-5: 51 46 66;
-  --oui-color-base-6: 43 38 56;
-  --oui-color-base-7: 36 32 47;
-  --oui-color-base-8: 29 26 38;
-  --oui-color-base-9: 22 20 28;
+  --oui-color-base-1: 51 46 66;
+  --oui-color-base-2: 44 40 59;
+  --oui-color-base-3: 38 35 52;
+  --oui-color-base-4: 32 30 46;
+  --oui-color-base-5: 29 26 42;
+  --oui-color-base-6: 26 23 38;
+  --oui-color-base-7: 23 20 34;
+  --oui-color-base-8: 20 18 31;
+  --oui-color-base-9: 17 15 27;
   --oui-color-base-10: 14 13 18;
 
   --oui-color-base-foreground: 255 255 255;
@@ -53,11 +53,11 @@
   --oui-color-trading-profit-contrast: 255 255 255;
 
   /* gradients */
-  --oui-gradient-primary-start: 40 0 97;
-  --oui-gradient-primary-end: 189 107 237;
+  --oui-gradient-primary-start: 40 114 66;
+  --oui-gradient-primary-end: 90 173 90;
 
-  --oui-gradient-secondary-start: 81 42 121;
-  --oui-gradient-secondary-end: 176 132 233;
+  --oui-gradient-secondary-start: 66 87 113;
+  --oui-gradient-secondary-end: 63 143 86;
 
   --oui-gradient-success-start: 1 83 68;
   --oui-gradient-success-end: 41 223 169;
@@ -65,8 +65,8 @@
   --oui-gradient-danger-start: 153 24 76;
   --oui-gradient-danger-end: 245 97 139;
 
-  --oui-gradient-brand-start: 231 219 249;
-  --oui-gradient-brand-end: 159 107 225;
+  --oui-gradient-brand-start: 143 204 143;
+  --oui-gradient-brand-end: 101 192 134;
   --oui-gradient-brand-stop-start: 6.62%;
   --oui-gradient-brand-stop-end: 86.5%;
   --oui-gradient-brand-angle: 17.44deg;
@@ -78,12 +78,12 @@
   --oui-gradient-neutral-end: 38 41 46;
 
   /* rounded */
-  --oui-rounded-sm: 2px;
-  --oui-rounded: 4px;
-  --oui-rounded-md: 6px;
-  --oui-rounded-lg: 8px;
-  --oui-rounded-xl: 12px;
-  --oui-rounded-2xl: 16px;
+  --oui-rounded-sm: 1px;
+  --oui-rounded: 2px;
+  --oui-rounded-md: 3px;
+  --oui-rounded-lg: 4px;
+  --oui-rounded-xl: 6px;
+  --oui-rounded-2xl: 8px;
   --oui-rounded-full: 9999px;
 
   /* spacing */
@@ -95,6 +95,6 @@
 }
 
 html, body {
-  font-family: 'Manrope', sans-serif !important;
-  font-size: 16px !important;
+  font-family: 'Ubuntu', sans-serif !important;
+  font-size: 15px !important;
 }
